Mobile version of website completed with placeholders
Mobile styling / sections / nav is all working.

--- a/index.html
+++ b/index.html
@@ -65,15 +65,17 @@
 			</article>
 		</div>
 		<div id="skills" class="slide">
+			<p>skills placeholder</p>
 			<ul>
 				<li><img src="#" alt="The jQuery icon" /></li>
 			</ul>
 		</div>
 		<div id="contact" class="slide">
 			<form action="contact"></form>
+			<p>contact form placeholder</p>
 		</div>
 		<footer>
-			<p>copyright 2021 Shanti Betts</p>
+			<p>copyright © 2021 Shanti Betts</p>
 			<ul>
 				<li>
 					<a href="https://www.linkedin.com/in/shantibetts/"
