Struggling with Grid vs Flex
I am trying to get my slides to line up the way I want them to as the browser changes window sizes. Grid was too inflexible, so I'm switching to flexbox to see if I can get that to flow better

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Shanti's Portfolio Grid Test</title>
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css-media-query.css" />
 		<script src="https://code.jquery.com/jquery-3.6.0.js" defer></script>
 		<script src="main.js" defer></script>
 	</head>
@@ -14,12 +15,12 @@
 		<header>
 			<img
 				id="menuIcon"
-				src="assets/noun-hamburger-4241052.svg"
+				src="assets/menu-icon.svg"
 				alt="Menu icon to open the nav bar"
 			/>
 			<img
 				id="menuX"
-				src="assets/noun-x-2147847.svg"
+				src="assets/x-icon.svg"
 				alt="X icon to close the nav bar"
 			/>
 			<h1>Shanti Betts</h1>
@@ -28,49 +29,71 @@
 			<ul>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Skills</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<div id="intro" class="slide">
 			<h2>Full Stack Developer</h2>
+			<p>with a background in engineering.</p>
 			<p>
-				with a background in engineering. Passionate about working in a
-				collaborative environment to collectively create tools and develop
-				strategies to increase efficiency and improve efficacy within the
-				organization.
+				I'm assionate about working in a collaborative environment to
+				collectively create tools and develop strategies to increase efficiency
+				and improve efficacy within the organization.
 			</p>
 		</div>
 		<div id="portfolio" class="slide">
-			<h2>Portfolio</h2>
-			<p>This is my portfolio, isn't it cool!</p>
+			<div>
+				<h2>Portfolio</h2>
+				<p>This is my portfolio, isn't it cool!</p>
+			</div>
 			<article class="slide">
-				<img src="#" alt="A description of the picture of Project 1" />
-				<h2>Project 1</h2>
+				<img
+					src="https://via.placeholder.com/728x450.png?text=Project+1"
+					alt="A description of the picture of Project 1"
+				/>
+				<h3>Project 1</h3>
 				<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
 			</article>
 			<article class="slide">
-				<img src="#" alt="A description of the picture of Project 2" />
-				<h2>Project 2</h2>
+				<img
+					src="https://via.placeholder.com/728x450.png?text=Project+2"
+					alt="A description of the picture of Project 2"
+				/>
+				<h3>Project 2</h3>
 				<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
 			</article>
 			<article class="slide">
-				<img src="#" alt="A description of the picture of Project 1" />
-				<h2>Project 3</h2>
+				<img
+					src="https://via.placeholder.com/728x450.png?text=Project+3"
+					alt="A description of the picture of Project 3"
+				/>
+				<h3>Project 3</h3>
 				<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
 			</article>
 			<article class="slide">
-				<img src="#" alt="A description of the picture of Project 1" />
-				<h2>Project 4</h2>
+				<img
+					src="https://via.placeholder.com/728x450.png?text=Project+4"
+					alt="A description of the picture of Project 4"
+				/>
+				<h3>Project 4</h3>
 				<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
 			</article>
 		</div>
 		<div id="skills" class="slide">
+			<h2>Skills</h2>
 			<p>skills placeholder</p>
 			<ul>
-				<li><img src="#" alt="The jQuery icon" /></li>
+				<li>
+					<img
+						src="https://via.placeholder.com/450.png?text=jQuery"
+						alt="The jQuery icon"
+					/>
+				</li>
 			</ul>
 		</div>
 		<div id="contact" class="slide">
+			<h2>Contact</h2>
 			<form action="contact"></form>
 			<p>contact form placeholder</p>
 		</div>
