--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			/>
 			<h1>Shanti Betts</h1>
 		</header>
-		<nav id="nav" class="slide">
+		<nav class="navSlide">
 			<ul>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Portfolio</a></li>
@@ -44,44 +44,46 @@
 		</div>
 		<div id="portfolio" class="slide">
 			<div>
-				<h2>Portfolio</h2>
+				<h3>Portfolio</h3>
 				<p>This is my portfolio, isn't it cool!</p>
 			</div>
-			<article class="slide">
-				<img
-					src="https://via.placeholder.com/728x425.png?text=Project+1"
-					alt="A description of the picture of Project 1"
-				/>
-				<h3>Project 1</h3>
-				<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
-			</article>
-			<article class="slide">
-				<img
-					src="https://via.placeholder.com/728x425.png?text=Project+2"
-					alt="A description of the picture of Project 2"
-				/>
-				<h3>Project 2</h3>
-				<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
-			</article>
-			<article class="slide">
-				<img
-					src="https://via.placeholder.com/728x425.png?text=Project+3"
-					alt="A description of the picture of Project 3"
-				/>
-				<h3>Project 3</h3>
-				<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
-			</article>
-			<article class="slide">
-				<img
-					src="https://via.placeholder.com/728x425.png?text=Project+4"
-					alt="A description of the picture of Project 4"
-				/>
-				<h3>Project 4</h3>
-				<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
-			</article>
+			<div class="portfolioContent">
+				<article id="project1" class="contentSlide">
+					<img
+						src="https://via.placeholder.com/1024x512.png?text=Project+1"
+						alt="A description of the picture of Project 1"
+					/>
+					<h4>Project 1</h4>
+					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
+				</article>
+				<article id="project2" class="contentSlide">
+					<img
+						src="https://via.placeholder.com/1024x512.png?text=Project+2"
+						alt="A description of the picture of Project 2"
+					/>
+					<h4>Project 2</h4>
+					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
+				</article>
+				<article id="project3" class="contentSlide">
+					<img
+						src="https://via.placeholder.com/1024x512.png?text=Project+3"
+						alt="A description of the picture of Project 3"
+					/>
+					<h4>Project 3</h4>
+					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
+				</article>
+				<article id="project4" class="contentSlide">
+					<img
+						src="https://via.placeholder.com/1024x512.png?text=Project+4"
+						alt="A description of the picture of Project 4"
+					/>
+					<h4>Project 4</h4>
+					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
+				</article>
+			</div>
 		</div>
 		<div id="skills" class="slide">
-			<h2>Skills</h2>
+			<h3>Skills</h3>
 			<p>skills placeholder</p>
 			<ul>
 				<li>
@@ -93,7 +95,7 @@
 			</ul>
 		</div>
 		<div id="contact" class="slide">
-			<h2>Contact</h2>
+			<h3>Contact</h3>
 			<form action="contact"></form>
 			<p>contact form placeholder</p>
 		</div>
