Website is working, design isn't
The design doesn't create enough space between objects and looks cluttered. I'm considering scrapping the existing design and switching to a bare-bones look where the whitespace will merge to make the design apear larger.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="main.js" defer></script>
 	</head>
 	<body>
+		<div class="headerSpacer"></div>
 		<header>
 			<img
 				id="menuIcon"
@@ -29,7 +30,7 @@
 			<ul>
 				<li><a href="#">About Me</a></li>
 				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Skills</a></li>
+				<li><a href="#">Resume</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
@@ -49,59 +50,92 @@
 			</div>
 			<div class="portfolioContent">
 				<article id="project1" class="contentSlide">
+					<h4>Project 1</h4>
+					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+1"
 						alt="A description of the picture of Project 1"
 					/>
-					<h4>Project 1</h4>
-					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
 				</article>
 				<article id="project2" class="contentSlide">
+					<h4>Project 2</h4>
+					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+2"
 						alt="A description of the picture of Project 2"
 					/>
-					<h4>Project 2</h4>
-					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
 				</article>
 				<article id="project3" class="contentSlide">
+					<h4>Project 3</h4>
+					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+3"
 						alt="A description of the picture of Project 3"
 					/>
-					<h4>Project 3</h4>
-					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
 				</article>
 				<article id="project4" class="contentSlide">
+					<h4>Project 4</h4>
+					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+4"
 						alt="A description of the picture of Project 4"
 					/>
-					<h4>Project 4</h4>
-					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
 				</article>
 			</div>
 		</div>
 		<div id="skills" class="slide">
-			<h3>Skills</h3>
-			<p>skills placeholder</p>
 			<ul>
 				<li>
-					<img
-						src="https://via.placeholder.com/450.png?text=jQuery"
-						alt="The jQuery icon"
-					/>
+					<img src="assets/html.svg" alt="The jQuery icon" />
+				</li>
+				<li>
+					<img src="assets/css.svg" alt="The jQuery icon" />
+				</li>
+				<li>
+					<img src="assets/jQuery.svg" alt="The jQuery icon" />
+				</li>
+				<li>
+					<img src="assets/nodejs.svg" alt="The jQuery icon" />
 				</li>
 			</ul>
 		</div>
 		<div id="contact" class="slide">
-			<h3>Contact</h3>
-			<form action="contact"></form>
-			<p>contact form placeholder</p>
+			<h3>Let's get in touch</h3>
+			<ul>
+				<li>
+					<a href="mailto:shanti.betts@gmail.com"
+						><img class="contactIcons" src="assets/mail.svg" alt="email icon"
+					/></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/shantibetts/"
+						><img
+							class="contactIcons"
+							src="assets/linkedin.svg"
+							alt="linked-in icon"
+					/></a>
+				</li>
+				<li>
+					<a href="https://github.com/shantibetts"
+						><img
+							class="contactIcons"
+							src="assets/gethub.svg"
+							alt="get hub icon"
+					/></a>
+				</li>
+			</ul>
 		</div>
 		<footer>
 			<p>copyright © 2021 Shanti Betts</p>
 			<ul>
+				<li>
+					<a href="mailto:shanti.betts@gmail.com"
+						><img
+							class="socialMediaIcons"
+							src="assets/mail.svg"
+							alt="email icon"
+					/></a>
+				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/shantibetts/"
 						><img
@@ -120,5 +154,6 @@
 				</li>
 			</ul>
 		</footer>
+		<div class="footerSpacer"></div>
 	</body>
 </html>
