--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
 		<nav class="navSlide">
 			<ul>
 				<li><a href="#">About Me</a></li>
-				<li><a href="#">Portfolio</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#projects">Projects</a></li>
 				<li><a href="#">Resume</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-		<div id="intro" class="slide">
+
+		<div id="headshot">
+			<img src="assets/Shanti-Headshot.jpg" alt="a headshot of Shanti" />
+		</div>
+		<div id="brandStatement">
 			<h2>Full Stack Developer</h2>
 			<p>with a background in engineering.</p>
 			<p>
@@ -43,47 +48,48 @@
 				and improve efficacy within the organization.
 			</p>
 		</div>
-		<div id="portfolio" class="slide">
+		<div id="projects" class="slide">
 			<div>
-				<h3>Portfolio</h3>
-				<p>This is my portfolio, isn't it cool!</p>
+				<h3>Projects</h3>
+				<p>These are some of my projects, aren't they great!</p>
 			</div>
 			<div class="portfolioContent">
-				<article id="project1" class="contentSlide">
-					<h4>Project 1</h4>
-					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
+				<article id="project1" class="project">
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+1"
 						alt="A description of the picture of Project 1"
 					/>
+					<h4>Project 1</h4>
+					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
 				</article>
-				<article id="project2" class="contentSlide">
-					<h4>Project 2</h4>
-					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
+				<article id="project2" class="project">
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+2"
 						alt="A description of the picture of Project 2"
 					/>
+					<h4>Project 2</h4>
+					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
 				</article>
-				<article id="project3" class="contentSlide">
-					<h4>Project 3</h4>
-					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
+				<article id="project3" class="project">
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+3"
 						alt="A description of the picture of Project 3"
 					/>
+					<h4>Project 3</h4>
+					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
 				</article>
-				<article id="project4" class="contentSlide">
-					<h4>Project 4</h4>
-					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
+				<article id="project4" class="project">
 					<img
 						src="https://via.placeholder.com/1024x512.png?text=Project+4"
 						alt="A description of the picture of Project 4"
 					/>
+					<h4>Project 4</h4>
+					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
 				</article>
 			</div>
 		</div>
-		<div id="skills" class="slide">
+		<div id="skills">
+			<h3>Skills</h3>
 			<ul>
 				<li>
 					<img src="assets/html.svg" alt="The jQuery icon" />
@@ -100,15 +106,15 @@
 			</ul>
 		</div>
 		<div id="contact" class="slide">
-			<h3>Let's get in touch</h3>
+			<h3>Let's get in touch...</h3>
 			<ul>
 				<li>
-					<a href="mailto:shanti.betts@gmail.com"
+					<a href="mailto:shanti.betts@gmail.com" target="_blank"
 						><img class="contactIcons" src="assets/mail.svg" alt="email icon"
 					/></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/shantibetts/"
+					<a href="https://www.linkedin.com/in/shantibetts/" target="_blank"
 						><img
 							class="contactIcons"
 							src="assets/linkedin.svg"
@@ -116,7 +122,7 @@
 					/></a>
 				</li>
 				<li>
-					<a href="https://github.com/shantibetts"
+					<a href="https://github.com/shantibetts" target="_blank"
 						><img
 							class="contactIcons"
 							src="assets/gethub.svg"
@@ -129,7 +135,7 @@
 			<p>copyright © 2021 Shanti Betts</p>
 			<ul>
 				<li>
-					<a href="mailto:shanti.betts@gmail.com"
+					<a href="mailto:shanti.betts@gmail.com" target="_blank"
 						><img
 							class="socialMediaIcons"
 							src="assets/mail.svg"
@@ -137,7 +143,7 @@
 					/></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/shantibetts/"
+					<a href="https://www.linkedin.com/in/shantibetts/" target="_blank"
 						><img
 							class="socialMediaIcons"
 							src="assets/linkedin.svg"
@@ -145,7 +151,7 @@
 					/></a>
 				</li>
 				<li>
-					<a href="https://github.com/shantibetts"
+					<a href="https://github.com/shantibetts" target="_blank"
 						><img
 							class="socialMediaIcons"
 							src="assets/gethub.svg"
