Removed extra backgrounds, more CSS
WIP on personal brand icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<h2>Full Stack Developer</h2>
 			<p>with a background in engineering.</p>
 			<p>
-				I'm assionate about working in a collaborative environment to
+				I'm passionate about working in a collaborative environment to
 				collectively create tools and develop strategies to increase efficiency
 				and improve efficacy within the organization.
 			</p>
@@ -132,7 +132,10 @@
 			</ul>
 		</div>
 		<footer>
-			<p>copyright © 2021 Shanti Betts</p>
+			<div>
+				<p>copyright © 2021 Shanti Betts</p>
+				<a id="photoCredit" href="#">photo by Nils Rasmusson</a>
+			</div>
 			<ul>
 				<li>
 					<a href="mailto:shanti.betts@gmail.com" target="_blank"
