Practicing git commit.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				alt="X icon to close the nav bar"
 			/>
 			<h1>Shanti Betts</h1>
+			<img id="brandIcon" src="assets/B.svg" alt="B with a crown" />
 		</header>
 		<nav class="navSlide">
 			<ul>
