Asset reorganization and working weather API

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 		<header>
 			<img
 				id="menuIcon"
-				src="assets/menu-icon.svg"
+				src="assets/icons/menu-icon.svg"
 				alt="Menu icon to open the nav bar"
 			/>
 			<img
 				id="menuX"
-				src="assets/x-icon.svg"
+				src="assets/icons/x-icon.svg"
 				alt="X icon to close the nav bar"
 			/>
 			<h1>Shanti Betts</h1>
-			<img id="brandIcon" src="assets/B.svg" alt="B with a crown" />
+			<img id="brandIcon" src="assets/icons/B.svg" alt="B with a crown" />
 		</header>
 		<nav class="navSlide">
 			<ul>
@@ -38,7 +38,10 @@
 		</nav>
 
 		<div id="headshot">
-			<img src="assets/Shanti-Headshot.jpg" alt="a headshot of Shanti" />
+			<img
+				src="assets/pictures/Shanti-Headshot.jpg"
+				alt="a headshot of Shanti"
+			/>
 		</div>
 		<div id="brandStatement">
 			<h2>Full Stack Developer</h2>
@@ -93,16 +96,16 @@
 			<h3>Skills</h3>
 			<ul>
 				<li>
-					<img src="assets/html.svg" alt="The jQuery icon" />
+					<img src="assets/skillsIcons/jQuery.svg" alt="The jQuery icon" />
 				</li>
 				<li>
-					<img src="assets/css.svg" alt="The jQuery icon" />
+					<img src="assets/skillsIcons/css.svg" alt="The jQuery icon" />
 				</li>
 				<li>
-					<img src="assets/jQuery.svg" alt="The jQuery icon" />
+					<img src="assets/skillsIcons/jQuery.svg" alt="The jQuery icon" />
 				</li>
 				<li>
-					<img src="assets/nodejs.svg" alt="The jQuery icon" />
+					<img src="assets/skillsIcons/nodejs.svg" alt="The jQuery icon" />
 				</li>
 			</ul>
 		</div>
@@ -111,14 +114,17 @@
 			<ul>
 				<li>
 					<a href="mailto:shanti.betts@gmail.com" target="_blank"
-						><img class="contactIcons" src="assets/mail.svg" alt="email icon"
+						><img
+							class="contactIcons"
+							src="assets/mediaIcons/mail.svg"
+							alt="email icon"
 					/></a>
 				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/shantibetts/" target="_blank"
 						><img
 							class="contactIcons"
-							src="assets/linkedin.svg"
+							src="assets/mediaIcons/linkedin.svg"
 							alt="linked-in icon"
 					/></a>
 				</li>
@@ -126,7 +132,7 @@
 					<a href="https://github.com/shantibetts" target="_blank"
 						><img
 							class="contactIcons"
-							src="assets/gethub.svg"
+							src="assets/mediaIcons/gethub.svg"
 							alt="get hub icon"
 					/></a>
 				</li>
@@ -137,12 +143,15 @@
 				<p>copyright © 2021 Shanti Betts</p>
 				<a id="photoCredit" href="#">photo by Nils Rasmusson</a>
 			</div>
+			<div class="weather">
+				<p>Yosemite Valley</p>
+			</div>
 			<ul>
 				<li>
 					<a href="mailto:shanti.betts@gmail.com" target="_blank"
 						><img
 							class="socialMediaIcons"
-							src="assets/mail.svg"
+							src="assets/mediaIcons/mail.svg"
 							alt="email icon"
 					/></a>
 				</li>
@@ -150,7 +159,7 @@
 					<a href="https://www.linkedin.com/in/shantibetts/" target="_blank"
 						><img
 							class="socialMediaIcons"
-							src="assets/linkedin.svg"
+							src="assets/mediaIcons/linkedin.svg"
 							alt="linked-in icon"
 					/></a>
 				</li>
@@ -158,7 +167,7 @@
 					<a href="https://github.com/shantibetts" target="_blank"
 						><img
 							class="socialMediaIcons"
-							src="assets/gethub.svg"
+							src="assets/mediaIcons/gethub.svg"
 							alt="get hub icon"
 					/></a>
 				</li>
