--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
 				and improve efficacy within the organization.
 			</p>
 		</div>
+		<div id="skills">
+			<h3>Skills</h3>
+			<ul>
+				<li>
+					<img src="assets/skillsIcons/html.svg" alt="HTML icon" />
+				</li>
+				<li>
+					<img src="assets/skillsIcons/css.svg" alt="CSS icon" />
+				</li>
+				<li>
+					<img src="assets/skillsIcons/jQuery.svg" alt="jQuery icon" />
+				</li>
+				<li>
+					<img src="assets/skillsIcons/nodejs.svg" alt="nodejs icon" />
+				</li>
+				<li>
+					<img src="assets/skillsIcons/AJAX.svg" alt="Ajax icon" />
+				</li>
+			</ul>
+		</div>
 		<div id="projects" class="slide">
 			<div>
 				<h3>Projects</h3>
@@ -63,7 +83,7 @@
 						src="https://via.placeholder.com/1024x512.png?text=Project+1"
 						alt="A description of the picture of Project 1"
 					/>
-					<h4>Project 1</h4>
+					<a href="#"><h4>Project 1</h4></a>
 					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
 				</article>
 				<article id="project2" class="project">
@@ -91,23 +111,6 @@
 					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
 				</article>
 			</div>
-		</div>
-		<div id="skills">
-			<h3>Skills</h3>
-			<ul>
-				<li>
-					<img src="assets/skillsIcons/jQuery.svg" alt="The jQuery icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/css.svg" alt="The jQuery icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/jQuery.svg" alt="The jQuery icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/nodejs.svg" alt="The jQuery icon" />
-				</li>
-			</ul>
 		</div>
 		<div id="contact" class="slide">
 			<h3>Let's get in touch...</h3>
@@ -141,7 +144,7 @@
 		<footer>
 			<div>
 				<p>copyright © 2021 Shanti Betts</p>
-				<a id="photoCredit" href="#">photo by Nils Rasmusson</a>
+				<a id="photoCredit" href="#"></a>
 			</div>
 			<div class="weather">
 				<p>Yosemite Valley</p>
