--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 					<img src="assets/skillsIcons/css.svg" alt="CSS icon" />
 				</li>
 				<li>
-					<img src="assets/skillsIcons/jQuery.svg" alt="jQuery icon" />
+					<img src="assets/skillsIcons/javascript.svg" alt="javaScript icon" />
 				</li>
 				<li>
-					<img src="assets/skillsIcons/nodejs.svg" alt="nodejs icon" />
+					<img src="assets/skillsIcons/jquery.svg" alt="jQuery icon" />
 				</li>
 				<li>
-					<img src="assets/skillsIcons/AJAX.svg" alt="Ajax icon" />
+					<img src="assets/skillsIcons/ajax.svg" alt="Ajax icon" />
 				</li>
 			</ul>
 		</div>
@@ -80,14 +80,39 @@
 			<div class="portfolioContent">
 				<article id="project1" class="project">
 					<img
+						class="projectImg"
 						src="https://via.placeholder.com/1024x512.png?text=Project+1"
 						alt="A description of the picture of Project 1"
 					/>
 					<a href="#"><h4>Project 1</h4></a>
 					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
+					<ul>
+						<li>
+							<img
+								class="projectSkillsIcon"
+								src="assets/skillsIcons/html.svg"
+								alt="${tag} icon"
+							/>
+						</li>
+						<li>
+							<img
+								class="projectSkillsIcon"
+								src="assets/skillsIcons/css.svg"
+								alt="${tag} icon"
+							/>
+						</li>
+						<li>
+							<img
+								class="projectSkillsIcon"
+								src="assets/skillsIcons/javascript.svg"
+								alt="${tag} icon"
+							/>
+						</li>
+					</ul>
 				</article>
 				<article id="project2" class="project">
 					<img
+						class="projectImg"
 						src="https://via.placeholder.com/1024x512.png?text=Project+2"
 						alt="A description of the picture of Project 2"
 					/>
@@ -96,6 +121,7 @@
 				</article>
 				<article id="project3" class="project">
 					<img
+						class="projectImg"
 						src="https://via.placeholder.com/1024x512.png?text=Project+3"
 						alt="A description of the picture of Project 3"
 					/>
@@ -104,6 +130,7 @@
 				</article>
 				<article id="project4" class="project">
 					<img
+						class="projectImg"
 						src="https://via.placeholder.com/1024x512.png?text=Project+4"
 						alt="A description of the picture of Project 4"
 					/>
