--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div id="skills">
 			<h3>Skills</h3>
 			<ul>
-				<li>
+				<!-- <li>
 					<img src="assets/skillsIcons/html.svg" alt="HTML icon" />
 				</li>
 				<li>
@@ -69,7 +69,7 @@
 				</li>
 				<li>
 					<img src="assets/skillsIcons/ajax.svg" alt="Ajax icon" />
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		<div id="projects" class="slide">
@@ -78,7 +78,7 @@
 				<p>These are some of my projects, aren't they great!</p>
 			</div>
 			<div class="portfolioContent">
-				<article id="project1" class="project">
+				<!-- <article id="project1" class="project">
 					<img
 						class="projectImg"
 						src="https://via.placeholder.com/1024x512.png?text=Project+1"
@@ -136,7 +136,7 @@
 					/>
 					<h4>Project 4</h4>
 					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
-				</article>
+				</article> -->
 			</div>
 		</div>
 		<div id="contact" class="slide">
