--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Shanti's Portfolio Grid Test</title>
+		<title>Shanti Betts</title>
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="css-media-query.css" />
@@ -25,7 +25,9 @@
 				alt="X icon to close the nav bar"
 			/>
 			<h1>Shanti Betts</h1>
-			<img id="brandIcon" src="assets/icons/B.svg" alt="B with a crown" />
+			<a href="#"
+				><img id="brandIcon" src="assets/icons/B.svg" alt="B with a crown"
+			/></a>
 		</header>
 		<nav class="navSlide">
 			<ul>
@@ -36,7 +38,6 @@
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-
 		<div id="headshot">
 			<img
 				src="assets/pictures/Shanti-Headshot.jpg"
@@ -54,90 +55,14 @@
 		</div>
 		<div id="skills">
 			<h3>Skills</h3>
-			<ul>
-				<!-- <li>
-					<img src="assets/skillsIcons/html.svg" alt="HTML icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/css.svg" alt="CSS icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/javascript.svg" alt="javaScript icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/jquery.svg" alt="jQuery icon" />
-				</li>
-				<li>
-					<img src="assets/skillsIcons/ajax.svg" alt="Ajax icon" />
-				</li> -->
-			</ul>
+			<ul></ul>
 		</div>
 		<div id="projects" class="slide">
 			<div>
 				<h3>Projects</h3>
 				<p>These are some of my projects, aren't they great!</p>
 			</div>
-			<div class="portfolioContent">
-				<!-- <article id="project1" class="project">
-					<img
-						class="projectImg"
-						src="https://via.placeholder.com/1024x512.png?text=Project+1"
-						alt="A description of the picture of Project 1"
-					/>
-					<a href="#"><h4>Project 1</h4></a>
-					<p>Project 1 is a showcase of the skills encapsulated in Unit 1</p>
-					<ul>
-						<li>
-							<img
-								class="projectSkillsIcon"
-								src="assets/skillsIcons/html.svg"
-								alt="${tag} icon"
-							/>
-						</li>
-						<li>
-							<img
-								class="projectSkillsIcon"
-								src="assets/skillsIcons/css.svg"
-								alt="${tag} icon"
-							/>
-						</li>
-						<li>
-							<img
-								class="projectSkillsIcon"
-								src="assets/skillsIcons/javascript.svg"
-								alt="${tag} icon"
-							/>
-						</li>
-					</ul>
-				</article>
-				<article id="project2" class="project">
-					<img
-						class="projectImg"
-						src="https://via.placeholder.com/1024x512.png?text=Project+2"
-						alt="A description of the picture of Project 2"
-					/>
-					<h4>Project 2</h4>
-					<p>Project 2 is a showcase of the skills encapsulated in Unit 2</p>
-				</article>
-				<article id="project3" class="project">
-					<img
-						class="projectImg"
-						src="https://via.placeholder.com/1024x512.png?text=Project+3"
-						alt="A description of the picture of Project 3"
-					/>
-					<h4>Project 3</h4>
-					<p>Project 3 is a showcase of the skills encapsulated in Unit 3</p>
-				</article>
-				<article id="project4" class="project">
-					<img
-						class="projectImg"
-						src="https://via.placeholder.com/1024x512.png?text=Project+4"
-						alt="A description of the picture of Project 4"
-					/>
-					<h4>Project 4</h4>
-					<p>Project 4 is a showcase of the other skills mastered in Unit 3</p>
-				</article> -->
-			</div>
+			<div class="portfolioContent"></div>
 		</div>
 		<div id="contact" class="slide">
 			<h3>Let's get in touch...</h3>
