updated django icon

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 		</div>
 		<div id="skills">
 			<h3>Skills</h3>
-			<ul></ul>
+			<ul>
+				<img src="assets/skillsIcons/django.svg" alt="" />
+			</ul>
 		</div>
 		<div id="projects" class="slide">
 			<div>
