updated branding statement

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 		</div>
 		<div id="brandStatement">
 			<h2>Full Stack Developer</h2>
-			<p>with a background in engineering.</p>
+			<p>with a background in CAD drafting and security design</p>
 			<p>
-				I'm passionate about working in a collaborative environment to
+				Passionate about leading teams in a collaborative environment to
 				collectively create tools and develop strategies to increase efficiency
-				and improve efficacy within the organization.
+				and improve efficacy within the organization. Strengths in workflow
+				design and standardization enables me to approach each project with an
+				eye for scalability and automation.
 			</p>
 		</div>
 		<div id="skills">
