--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Shanti Betts</title>
+		<link rel="icon" type="image/svg+xml" href="/assets/icons/CrownB.svg" />
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="css-media-query.css" />
@@ -26,7 +27,10 @@
 			/>
 			<h1>Shanti Betts</h1>
 			<a href="#"
-				><img id="brandIcon" src="assets/icons/B.svg" alt="B with a crown"
+				><img
+					id="brandIcon"
+					src="assets/icons/CrownB.svg"
+					alt="capitol B with a crown"
 			/></a>
 		</header>
 		<nav class="navSlide">
