--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Shanti Betts</title>
-		<link rel="icon" type="image/svg+xml" href="/assets/icons/CrownB.svg" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/assets/icons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/assets/icons/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/assets/icons/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/assets/icons/site.webmanifest" />
+		<link
+			rel="mask-icon"
+			href="/assets/icons/safari-pinned-tab.svg"
+			color="#5bbad5"
+		/>
+		<link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#2d89ef" />
+		<meta
+			name="msapplication-config"
+			content="/assets/icons/browserconfig.xml"
+		/>
+		<meta name="theme-color" content="#c2bdbd" />
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="css-media-query.css" />
@@ -29,7 +58,7 @@
 			<a href="#"
 				><img
 					id="brandIcon"
-					src="assets/icons/CrownB.svg"
+					src="assets/icons/crownb.svg"
 					alt="capitol B with a crown"
 			/></a>
 		</header>
@@ -53,17 +82,15 @@
 			<p>with a background in CAD drafting and security design</p>
 			<p>
 				Passionate about leading teams in a collaborative environment to
-				collectively create tools and develop strategies to increase efficiency
-				and improve efficacy within the organization. Strengths in workflow
-				design and standardization enables me to approach each project with an
-				eye for scalability and automation.
+				collectively cultivate new products and tools, while developing
+				strategies that will increase efficiency and improve efficacy within the
+				organization. Strengths in workflow design and standardization enables
+				me to approach each project with an eye for scalability and automation.
 			</p>
 		</div>
 		<div id="skills">
 			<h3>Skills</h3>
-			<ul>
-				<img src="assets/skillsIcons/django.svg" alt="" />
-			</ul>
+			<ul></ul>
 		</div>
 		<div id="projects" class="slide">
 			<div>
