--- a/index.html
+++ b/index.html
@@ -5,35 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Shanti Betts</title>
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="/assets/icons/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="/assets/icons/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="/assets/icons/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="/assets/icons/site.webmanifest" />
-		<link
-			rel="mask-icon"
-			href="/assets/icons/safari-pinned-tab.svg"
-			color="#5bbad5"
-		/>
-		<link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+		<link rel="manifest" href="site.webmanifest" />
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="shortcut icon" href="favicon.ico" />
 		<meta name="msapplication-TileColor" content="#2d89ef" />
-		<meta
-			name="msapplication-config"
-			content="/assets/icons/browserconfig.xml"
-		/>
+		<meta name="msapplication-config" content="browserconfig.xml" />
 		<meta name="theme-color" content="#c2bdbd" />
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
