--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div id="projects" class="slide">
 			<div>
 				<h3>Projects</h3>
-				<p>These are some of my projects, aren't they great!</p>
+				<p>Here are some of my projects including the skills they showcase.</p>
 			</div>
 			<div class="portfolioContent"></div>
 		</div>
