--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 				<li><a href="#">About Me</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#projects">Projects</a></li>
-				<li><a href="#">Resume</a></li>
+				<li>
+					<a href="./assets/ShantiBettsResume7-12-22.pdf" target="_blank"
+						>Resume</a
+					>
+				</li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
