Updated branding statement

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 		</div>
 		<div id="brandStatement">
 			<h2>Full Stack Developer</h2>
-			<p>with a background in CAD drafting and security design</p>
+			<p>with a background in Mechanical Engineering and security design.</p>
 			<p>
 				Passionate about leading teams in a collaborative environment to
 				collectively cultivate new products and tools, while developing
-				strategies that will increase efficiency and improve efficacy within the
+				strategies that increase efficiency and improve efficacy within an
 				organization. Strengths in workflow design and standardization enables
 				me to approach each project with an eye for scalability and automation.
 			</p>
