--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li>
-					<a href="./assets/ShantiBettsResume7-12-22.pdf" target="_blank"
-						>Resume</a
-					>
+					<a href="./assets/ShantiBettsResume.pdf" target="_blank">Resume</a>
 				</li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
